--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,12 @@
-/* @layer tailwind-base, primereact, tailwind-utilities;
+@layer tailwind-base, primereact, tailwind-utilities;
 
-@import 'primereact/resources/themes/lara-light-blue/theme.css';
+@import 'primeicons/primeicons.css';
 
 @layer tailwind-base {
-  @import 'tailwindcss/preflight';
+  @tailwind base;
 }
 
 @layer tailwind-utilities {
+  @tailwind components;
   @tailwind utilities;
-} */
-
-@import 'tailwindcss';
-@import 'primereact/resources/themes/lara-light-blue/theme.css';
-@import 'primereact/resources/primereact.min.css';
-@import 'primeicons/primeicons.css';
+}
